--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html {
-    background:#279df2;
-    margin: 0%;
+    /* background:#279df2; */
+    /* margin: 0%; */
     font-family: sans-serif;
     line-height: 1.15;
     
@@ -8,8 +8,17 @@ html {
 
 body {
     margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+a {
+    color: #000000;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 h1 {
@@ -22,11 +31,11 @@ h1 {
     flex-wrap: wrap;
 }
 
-span.title-text {
+span.title-text, p.title-text {
     font-size: 42px;
 }
 
-span.body-text {
+span.body-text, p.body-text {
     font-size: 36px;
 }
 
@@ -49,11 +58,11 @@ span.body-text {
     background-color: #279df2;
 }
 
-.finder {
+.categories {
     color: #000000;
     font-size: 20px;
     padding: 2% 5%;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
 }
 
 .footer {
@@ -62,13 +71,13 @@ span.body-text {
     padding-left: 2%;
     /* margin-right: auto;
     margin-left: auto; */
-    background: #FFFFFF;
+    background-color: #f2f2f2;
 }
 
 .img-thumbnail {
     padding: 2%;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgb(222, 226, 230);
+    background-color: #ffffff;
+    border: 1px solid #dee2e6;
     border-radius: 1%;
     max-width: 100%;
     height: auto
@@ -91,4 +100,111 @@ span.body-text {
   
 .col-4 {
     max-width: 30%
+}
+
+
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+.container {
+    padding: 16px;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+.login {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+.login-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 20%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+}
+    
+@keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
 }
