--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,25 @@ body {
     margin-right: 5%;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: left;
+}
+
+
+li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
 a {
     color: #000000;
     text-decoration: none;
