--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,4 @@
 html {
-    /* background:#279df2; */
-    /* margin: 0%; */
     font-family: sans-serif;
     line-height: 1.15;
     
@@ -12,6 +10,24 @@ body {
     margin-right: 5%;
 }
 
+ul {
+    list-style-type: none;
+    overflow: hidden;
+}
+
+li {
+    font-size: 20px;
+    float: left;
+}
+
+
+li a {
+    
+    display: block;
+    text-align: center;
+    padding: 0px 16px;
+    text-decoration: none;
+}
 a {
     color: #000000;
     text-decoration: none;
@@ -21,27 +37,21 @@ a:hover {
     text-decoration: underline;
 }
 
-h1 {
-    margin-top: 0%;
-    margin-bottom: 1%;
-}
-
 .row {
     display: flex;
     flex-wrap: wrap;
 }
 
-span.title-text, p.title-text {
+.title-text {
     font-size: 42px;
 }
 
-span.body-text, p.body-text {
+.body-text {
     font-size: 36px;
 }
 
 
-.title {
-    display: inherit;
+.navbar {
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 2%;
@@ -191,10 +201,54 @@ span.psw {
     cursor: pointer;
 }
 
+.dropdown {
+    float: right;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 20px;    
+    border: none;
+    outline: none;
+    color: #000000;
+    padding: 14px 16px;
+    background-color: inherit;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    /* background-color: #ddd; */
+    text-decoration: underline;
+}
+
+.show {
+    display: block;
+}
+
+
+
 /* Add Zoom Animation */
 .animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
+    -webkit-animation: animatezoom 0.9s;
+    animation: animatezoom 0.9s
 }
 
 @-webkit-keyframes animatezoom {
@@ -217,3 +271,33 @@ span.psw {
        width: 100%;
     }
 }
+
+/* css create event*/
+.create {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+.create-content {
+    background-color: #fefefe;
+    margin: 1% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 60%;
+}
+input[type=text]{
+    border: 2px solid #dadada;
+    border-radius: 7px;
+}
+input[type="text"]:focus{
+    outline: none;
+    border-color: #9ecaed;
+    box-shadow: 0 0 15px #9ecaed;
+} 
