--- a/css/styleProfile.css
+++ b/css/styleProfile.css
@@ -3,14 +3,14 @@
   max-width: 300px;
   text-align: center;
   font-family: arial;
-}
+} 
 
-.title {
+/* .title {
   color: grey;
   font-size: 18px;
-}
+} */
 
-button {
+.buttonContact {
   border: none;
   outline: 0;
   display: inline-block;
@@ -23,33 +23,9 @@ button {
   font-size: 18px;
 }
 
-a {
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
-}
 
-button:hover, a:hover {
+
+.buttonContact:hover, a:hover {
   opacity: 0.7;
-}
+} 
 
-/*menu bar*/
-
-.nav li ul {
-    position:absolute;
-    right: 0;
-    top:36px;
-    z-index:1;
-    max-height:0;
-    overflow:hidden;
-    -webkit-transform:perspective(400) rotate3d(1,0,0,-90deg);
-    -webkit-transform-origin:50% 0;
-    -webkit-transition:350ms;
-    -moz-transition:350ms;
-    -o-transition:350ms;
-    transition:350ms;
-}
-.nav ul > li:hover ul {
-    max-height:1000px;
-    -webkit-transform:perspective(400) rotate3d(0,0,0,0);
-}
