--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-html {
+/* html {
     font-family: sans-serif;
     line-height: 1.15;
     
@@ -66,7 +66,7 @@ a:hover {
     font-size: 20px;
     padding: 2% 5%;
     background-color: #279df2;
-}
+} */
 
 .categories {
     color: #000000;
@@ -125,28 +125,34 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
-button {
+/* button {
     background-color: #4CAF50;
     color: white;
-    padding: 14px 20px;
+    padding: 10px 18px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
 }
-
+*/
 button:hover {
     opacity: 0.8;
-}
+} 
 
 /* Extra styles for the cancel button */
 .cancelbtn {
+  
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
+    color: white;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+
 }
 
-.container {
+.con {
     padding: 16px;
 }
 
@@ -200,7 +206,7 @@ span.psw {
     color: red;
     cursor: pointer;
 }
-
+/* 
 .dropdown {
     float: right;
     overflow: hidden;
@@ -235,9 +241,9 @@ span.psw {
 }
 
 .dropdown-content a:hover {
-    /* background-color: #ddd; */
+    /* background-color: #ddd;
     text-decoration: underline;
-}
+} */
 
 .show {
     display: block;
@@ -359,7 +365,7 @@ input[type="text"]:focus{
 .text{
     text-align: center;
     font-size: 40px;
-    background-color: red; 
+    background-color: DodgerBlue; 
 }
 .Recommended,.upcoming,.nearby {/*Block Recommended,upcoming,nearby*/
     display: inline-block;
