--- a/css/event.css
+++ b/css/event.css
@@ -49,7 +49,7 @@
 .testbox {/*Block */
     display: inline-block;
     width: 430px;
-    height: 250px;
+    height: 200px;
     margin-left: 30px;
     
     
@@ -57,7 +57,7 @@
     border: 3px solid white;
     font-size: 15px; 
     
-    margin-bottom: 100px;
+    margin-bottom: 70px;
 
 }
 .block-1 {
@@ -66,6 +66,7 @@
     margin: 20px;
     background: #0E9F98;
     float: left;
+
 }
 .block-2 {
     width: 120px;
@@ -76,18 +77,23 @@
 }
 
 .box-1{
-            width:450px; 
-            height:300px; 
-            background:#FFCC00; 
+            width:650px; 
+            height:900px; 
+
+            
             float:left;
-            margin-left: 160px;
+            margin-left: 60px;
+            display: inline-block;
         }
 .box-2{
-    width:450px; 
+    margin-top: 80px;
+    width:550px; 
     height:300px; 
-    background:#99CC00; 
+    
     float:left;
-    margin-left: 110px;
+    margin-left: 40px;
+    display: inline-block;
+    margin-top: 10px;
         }
 .box-3{
     margin-top: 20px;
@@ -110,8 +116,8 @@
     font-size: 200%;
 }
 .head{
-    background-color: red; 
-    margin-top: 190px;
+     
+    
 
 }
 .inbox{
@@ -119,4 +125,32 @@
     font-size: 150%;
 
 }
+.read-more-state {
+  display: none;
+}
+
+.read-more-target {
+  opacity: 0;
+  max-height: 0;
+  font-size: 0;
+  transition: .25s ease;
+}
+
+.read-more-state:checked ~ .read-more-wrap .read-more-target {
+  opacity: 1;
+  font-size: inherit;
+  max-height: 999em;
+}
+
+.read-more-state ~ .read-more-trigger:before {
+  content: 'Show more';
+}
+
+.read-more-state:checked ~ .read-more-trigger:before {
+  content: 'Show less';
+}
+.read-more-trigger {
+    margin-top:10px;
+    margin-left: 450px;
+    font-size: 10px;
 
