--- a/css/styleProfile.css
+++ b/css/styleProfile.css
@@ -1,31 +1,73 @@
-.card {
-  box-shadow: 0 10px 14px 0 rgba(0, 0, 0, 2);
-  max-width: 300px;
-  text-align: center;
-  font-family: arial;
-} 
-
-/* .title {
-  color: grey;
-  font-size: 18px;
-} */
-
-.buttonContact {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
+.wrapper-profile {
+  padding: 5px;
+  max-width: 960px;
+  width: 95%;
+  margin: 20px auto;
 }
 
+.columns-profile {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin: 5px 0;
+  margin-left: 5px;
 
+}
 
-.buttonContact:hover, a:hover {
-  opacity: 0.7;
-} 
+.column-profile {
+  flex: 9;
+  border: 1px solid gray;
+  margin: 10px;
+  padding: 20px;
+  margin-right: -155px;
+}
+.column3-profile {
+  flex: 3;
+  border: 1px solid white;
+  margin: 10px;
+  padding: 20px;
+  margin-left: -155px;    
+}
+.column2-profile {
+margin-top:5px; 
+border: 1px solid black;
 
+}
+.column4-profile{
+margin-top:10px; 
+border: 0px solid black;
+
+}
+
+table {
+  border-collapse: collapse;
+}
+
+table, td-profile, th {
+  border: 1px solid white;
+}
+
+.td2-profile {
+text-align: center;
+}
+.tablecolumn-profile {
+width: 850px;
+font-size: 20px;
+}
+.tablecolumn1-profile {
+text-align: center;
+width: 150px;
+font-size: 20px;
+}
+
+.name-profile {
+  font-size: 28px;
+  padding-right: 4%; 
+}
+
+.info-profile {
+  font-size: 18px;
+  padding-right: 4%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
